--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -39,36 +39,36 @@
             <div class="container">
                 <h2 class="text-center">Reserva tu Turno</h2>
                 <div class="row">
-                    <div id="principal" class="col-sm-12 col-md-6">
-                        <div class="mb-3 col-sm-12 col-md-6">
-                            <label for="exampleFormControlInput1" class="form-label text-danger">Nombre y Apellido</label>
-                            <input type="nombre_apellido" class="form-control" id="exampleFormControlInput1" placeholder="Tu Nombre" required>
+                    <div id="principal" class="col-sm-12 col-md-6 bg-white bg-opacity-50 text-center">
+                        <div class="mb-3 col-sm-12 col-md-12">
+                            <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
+                            <input type="nombre_apellido" class="form-control" id="exampleFormControlInput1" placeholder="Tu Nombre y Apellido" required>
                         </div>
-                        <div class="mb-3 col-sm-12 col-md-6">
-                            <label for="exampleFormControlInput1" class="form-label text-danger">Telefono de Contacto</label>
+                        <div class="mb-3 col-sm-12 col-md-12">
+                            <label for="exampleFormControlInput1" class="form-label">Telefono de Contacto</label>
                             <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Tu Numero" required> 
                         </div>           
-                        <div class="mb-3 col-sm-12 col-md-6">
-                            <label for="exampleFormControlInput1" class="form-label text-danger">Email address</label>
+                        <div class="mb-3 col-sm-12 col-md-12">
+                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                         </div>
-                        <div class="contacto__servicio col-sm-12 col-md-6">
-                            <p class="text-danger">Tipo de Servicio Buscas</p>
-                            <span class="text-danger">Consultorio</span>
+                        <div class="contacto__servicio col-sm-12 col-md-12">
+                            <p>Tipo de Servicio Buscas</p>
+                            <span>Consultorio</span>
                             <input type="radio" name="servicio" id="consultario">
-                            <span class="text-danger">Domicilio</span>
+                            <span>Domicilio</span>
                             <input type="radio" name="servicio" id="domicilio">
                         </div>
-                        <div class="mb-3 col-sm-12 col-md-6">
-                            <label for="exampleFormControlInput1" class="form-label text-danger">Tu Edad</label>
+                        <div class="mb-3 col-sm-12 col-md-12">
+                            <label for="exampleFormControlInput1" class="form-label">Tu Edad</label>
                             <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Tu Edad" required> 
                         </div>
-                        <div class="mb-3 col-sm-12 col-md-6">
-                            <label for="exampleFormControlInput1" class="form-label text-danger">Cuanto Pesas</label>
+                        <div class="mb-3 col-sm-12 col-md-12">
+                            <label for="exampleFormControlInput1" class="form-label">Cuanto Pesas</label>
                             <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Tu Peso" required> 
                         </div>
-                        <div class="mb-3 col-sm-12 col-md-6"> 
-                            <span class="text-danger">Enfermedades</span>
+                        <div class="mb-3 col-sm-12 col-md-12"> 
+                            <span>Enfermedades</span>
                             <select class="form-select" aria-label="Default select example">
                                 <option selected>Seleccione una</option>
                                 <option value="1">Algun tipo de tumor</option>
@@ -81,11 +81,11 @@
                                 <option value="3">Ninguna</option>
                             </select>
                         </div>
-                        <div class="contacto__servicio col-sm-12 col-md-6">
-                            <p class="text-danger">Tatuajes</p>
-                            <span class="text-danger">Si</span>
+                        <div class="contacto__servicio col-sm-12 col-md-12">
+                            <p>Tatuajes</p>
+                            <span>Si</span>
                             <input type="radio" name="servicio" id="si">
-                            <span class="text-danger">NO</span>
+                            <span>NO</span>
                             <input type="radio" name="servicio" id="no">
                         </div>
                         <div class="contacto__boton">
@@ -110,10 +110,10 @@
                         Relajante
                     </div>
                     <div class="col text-danger fs-4">
-                        $2000.-
+                        $2000
                     </div>
                     <div class="col text-danger fs-4">
-                        $2500.-
+                        $2500
                     </div>
                     </div>
                     <div class="row">
@@ -121,10 +121,10 @@
                             Descontr.
                         </div>
                         <div class="col text-danger fs-4">
-                            $2500.-
+                            $2500
                         </div>
                         <div class="col text-danger fs-4">
-                            $3000.-
+                            $3000
                         </div>
                     </div>
                     <div class="row">
@@ -132,10 +132,10 @@
                             Sedativos
                         </div>
                         <div class="col text-danger fs-4">
-                            $2000.-
+                            $2000
                         </div>
                         <div class="col text-danger fs-4">
-                            $2200.-
+                            $2200
                         </div>
                     </div>
                     <div class="row">
@@ -143,10 +143,10 @@
                             Vendas Frias
                         </div>
                         <div class="col text-danger fs-4">
-                            $2000.-
+                            $2000
                         </div>
                         <div class="col text-danger fs-4">
-                            $2200.-
+                            $2200
                         </div>
                     </div>
                 </div>
